# symforce

./: BUILD.bazel  MODULE.bazel  dev_requirements.txt  requirements.txt  requirements_dev_py312.txt
symforce/: cc_sym.py  python_util.py
symforce/codegen/: format_util.py
symforce/examples/: BUILD.bazel
symforce/examples/bundle_adjustment/: BUILD.bazel  build_example_state.cc  build_example_state.h  main.cc  run_bundle_adjustment.cc
symforce/examples/bundle_adjustment_fixed_size/: BUILD.bazel  main.cc
symforce/examples/bundle_adjustment_in_the_large/: BUILD.bazel
symforce/examples/custom_factor_generation/: BUILD.bazel
symforce/examples/example_utils/: BUILD.bazel  bundle_adjustment_util.h
symforce/examples/robot_2d_localization/: BUILD.bazel  main.cc
symforce/examples/robot_3d_localization/: BUILD.bazel  main_dynamic.cc  main_fixed.cc  run_dynamic_size.cc  run_dynamic_size.h  run_fixed_size.cc
symforce/ops/: __init__.py
symforce/opt/: assert.h  dense_linearizer.cc  dump_graph.h  factor.cc  factor.h  key.h  levenberg_marquardt_solver.tcc  linearizer.cc  linearizer.h  optimizer.py  sparse_schur_solver.tcc  tic_toc.h  values.cc  values.h  values.tcc
symforce/opt/internal/: derivative_checker.h  linearizer_utils.h  logging_configure.cc  optimizer_utils.h  tic_toc.cc
symforce/pybind/: cc_factor.cc  cc_key.cc  cc_values.cc  lcm_type_casters.h  sym_type_casters.h
test/: BUILD.bazel
